# 22f3000668_tds_project_1_virtual_ta

./: .replit  DEPLOYMENT.md  README.md  main.py  project-tds-virtual-ta-promptfoo.yaml  pyproject.toml  qa_engine.py  scrape_discourse.py  vercel.json
attached_assets/: Pasted-Core-Functionalities-POST-API-Endpoint-api-Accepts-a-JSON-request-containing-question-string-1749894546509_1749894546513.txt
data/: course_content.json  tds_posts.json
